# prog1-beleg

./: .gitignore  CMakeLists.txt  README.md  main.c
doc/: 01-ueber.tex  02-analyse.tex  03-entwurf.tex  04-implementierung.tex  05-test.tex  06-inbetriebnahme.tex  dokumentation.bib  dokumentation.tex
include/: core.h
include/common/: error.h  error.private.h  list.h
include/data/: database.h  database.private.h  image.h  material_item.h  material_item.private.h  query.h  query.private.h
include/frontend/: editor.h  error.h  globals.h  list.h  welcome.h
include/logic/: csv_export.h  items_edit.h  items_query.h
src/: core.c
src/common/: error.c  list.c
src/data/: database.c  image.c  material_item.c  query.c
src/frontend/: editor.c  error.c  globals.c  list.c  main.c  welcome.c
src/logic/: csv_export.c  items_query.c
tests/: test_utils.c  test_utils.h
tests/common/: custom_error.c  list.c
tests/data/: database.c  image.c  material_item.c
tests/logic/: items_query.c
ui/: prog1-beleg.glade
